--- a/CGKR.css
+++ b/CGKR.css
@@ -1,43 +1,31 @@
+body{
+    background-image:url(img/IMG2.jpeg);
+    height: 2000px;
+    background-size: cover;
+    background-size: 90rem;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+}
 
-
-/* Stylesheet */
- 
-/*
-    author: forCode
-    url: www.forcode.es/blog
-*/
- 
-/* Imports */
- 
-@import url(animate.css);
- 
-/* Selections */
- 
 ::selection {
     color: #fff;
     text-shadow: none;
-    background: rgba(85, 185, 14, 0.067);
+    background: rgb(255, 255, 255);
 }
- 
 ::-moz-selection {
     color: #fff;
     text-shadow: none;
-    background: rgb(19, 19, 133)2;
+    background: rgb(255, 255, 255);
 }
- 
-/* Basics */
- 
 html, body {
-    width: 100%;
-    height: 100%;
-    font-family: &quot;Helvetica Neue&quot;, Helvetica, sans-serif;
+    width: 0px;
+    height: 0px;
+    font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
-    /*/background: #f0f0f0;*/
- 
 }
- 
 #container {
-    color: red;
+    color: rgb(255, 255, 255);
     position: fixed;
     width: 340px;
     height: 280px;
@@ -46,12 +34,11 @@ html, body {
     margin-top: -140px;
     margin-left: -170px;
     /*background: #fff;*/
-    background-image: url(img/img1.png);
+    background-image: url(img/IMG3.jpeg);
     /*background-image: url("img/img1.png"), url("img/img1.png");*/
-    
     border-radius: 3px;
     border: 1px solid #ccc;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
+    box-shadow: 0 1px 2px rgb(255, 255, 255);
     -webkit-animation-name: bounceIn;
     -webkit-animation-fill-mode: both;
     -webkit-animation-duration: 1s;
@@ -68,23 +55,20 @@ html, body {
     animation-iteration-count: 1;
     animation-timing-function: linear;
 }
- 
 form {
     margin: 0 auto;
     margin-top: 20px;
 }
- 
 label {
-    color: #555;
+    color: #ffffff;
     display: inline-block;
     margin-left: 18px;
     padding-top: 10px;
     font-size: 14px;
 }
- 
 p a {
     font-size: 11px;
-    color: #aaa;
+    color: #ffffff;
     float: right;
     margin-top: -13px;
     margin-right: 20px;
@@ -92,46 +76,40 @@ p a {
     -moz-transition: all .4s ease;
     transition: all .4s ease;
 }
- 
 p a:hover {
-    color: #555;
+    color: #ffffff;
 }
- 
 input {
-    font-family: &quot;Helvetica Neue&quot;, Helvetica, sans-serif;
-    font-size: 12px;
+    font-family:Arial, Helvetica, sans-serif;
     outline: none;
 }
- 
 input[type=name],
 input[type=password] {
-    color: #777;
+    color: #000000;
     padding-left: 10px;
     margin: 10px;
     margin-top: 12px;
     margin-left: 18px;
     width: 290px;
     height: 35px;
-    border: 1px solid #c7d0d2;
+    border: 1px solid #ffffff;
     border-radius: 2px;
-    box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .4), 0 0 0 5px #f5f7f8;
+    box-shadow: inset 0 1.5px 3px rgba(255, 255, 255, 0.4), 0 0 0 5px #f5f7f8;
     -webkit-transition: all .4s ease;
     -moz-transition: all .4s ease;
     transition: all .4s ease;
 }
- 
+
 input[type=name]:hover,
 input[type=password]:hover {
-    border: 1px solid #b6bfc0;
+    border: 1px solid #ffffff;
     box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .7), 0 0 0 5px #f5f7f8;
 }
- 
 input[type=name]:focus,
 input[type=password]:focus {
     border: 1px solid #a8c9e4;
     box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .4), 0 0 0 5px #e6f2f9;
 }
- 
 #lower {
     background: #ecf2f5;
     width: 100%;
@@ -142,19 +120,17 @@ input[type=password]:focus {
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
 }
- 
+
 input[type=checkbox] {
     margin-left: 20px;
     margin-top: 30px;
 }
- 
 .check {
     margin-left: 3px;
     font-size: 11px;
-    color: #444;
+    color: #000000;
     text-shadow: 0 1px 0 #fff;
 }
- 
 input[type=submit] {
     float: right;
     margin-right: 20px;
@@ -172,13 +148,11 @@ input[type=submit] {
     box-shadow: 0 1px 2px rgba(0, 0, 0, .3), inset 0 1px 0 rgba(255, 255, 255, .5);
     cursor: pointer;
 }
- 
 input[type=submit]:hover {
     background-image: -webkit-gradient(linear, left top, left bottom, from(#b6e2ff), to(#6ec2e8));
     background-image: -moz-linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
     background-image: linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
 }
- 
 input[type=submit]:active {
     background-image: -webkit-gradient(linear, left top, left bottom, from(#6ec2e8), to(#b6e2ff));
     background-image: -moz-linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
