--- a/CGKR.css
+++ b/CGKR.css
@@ -91,7 +91,7 @@
 }
 
 .slide-circulo {
-    color: #db3d3d;
+    color: #828282;
     cursor: pointer;
     display: block;
     font-size: 35px;
@@ -104,7 +104,7 @@
 #slide-1:checked ~ .control-1 ~ .slide-indicador 
      li:nth-child(1) .slide-circulo,
 #slide-2:checked ~ .control-2 ~ .slide-indicador 
-      li:nth-child(2) .slide-circulo,
+    li:nth-child(2) .slide-circulo,
 #slide-3:checked ~ .control-3 ~ .slide-indicador 
       li:nth-child(3) .slide-circulo {
     color: #428bca;
