--- a/CGKR.css
+++ b/CGKR.css
@@ -7,7 +7,8 @@ ul {
 }
 
 li {
-    float: left;
+    float: left; /* esto mueve los 3 puntitos a la izquierda*/
+    /*HAY QUE BORRARLO o editar las otras con class*/
 }
 
 li a {
