--- a/CGKR.css
+++ b/CGKR.css
@@ -1,5 +1,5 @@
-body {
-    background-image: url(img/IMG2.jpeg);
+body{
+    background-image:url(img/IMG2.jpeg);
     height: 2000px;
     background-size: cover;
     background-size: 90rem;
@@ -13,21 +13,17 @@ body {
     text-shadow: none;
     background: rgb(255, 255, 255);
 }
-
 ::-moz-selection {
     color: #fff;
     text-shadow: none;
     background: rgb(255, 255, 255);
 }
-
-html,
-body {
+html, body {
     width: 0px;
     height: 0px;
     font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
 }
-
 #container {
     color: rgb(255, 255, 255);
     position: fixed;
@@ -59,12 +55,10 @@ body {
     animation-iteration-count: 1;
     animation-timing-function: linear;
 }
-
 form {
     margin: 0 auto;
     margin-top: 20px;
 }
-
 label {
     color: #ffffff;
     display: inline-block;
@@ -72,7 +66,6 @@ label {
     padding-top: 10px;
     font-size: 14px;
 }
-
 p a {
     font-size: 11px;
     color: #ffffff;
@@ -83,16 +76,13 @@ p a {
     -moz-transition: all .4s ease;
     transition: all .4s ease;
 }
-
 p a:hover {
     color: #ffffff;
 }
-
 input {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     outline: none;
 }
-
 input[type=name],
 input[type=password] {
     color: #000000;
@@ -115,13 +105,11 @@ input[type=password]:hover {
     border: 1px solid #ffffff;
     box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .7), 0 0 0 5px #f5f7f8;
 }
-
 input[type=name]:focus,
 input[type=password]:focus {
     border: 1px solid #a8c9e4;
     box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, .4), 0 0 0 5px #e6f2f9;
 }
-
 #lower {
     background: #ecf2f5;
     width: 100%;
@@ -137,14 +125,12 @@ input[type=checkbox] {
     margin-left: 20px;
     margin-top: 30px;
 }
-
 .check {
     margin-left: 3px;
     font-size: 11px;
     color: #000000;
     text-shadow: 0 1px 0 #fff;
 }
-
 input[type=submit] {
     float: right;
     margin-right: 20px;
@@ -162,13 +148,11 @@ input[type=submit] {
     box-shadow: 0 1px 2px rgba(0, 0, 0, .3), inset 0 1px 0 rgba(255, 255, 255, .5);
     cursor: pointer;
 }
-
 input[type=submit]:hover {
     background-image: -webkit-gradient(linear, left top, left bottom, from(#b6e2ff), to(#6ec2e8));
     background-image: -moz-linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
     background-image: linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
 }
-
 input[type=submit]:active {
     background-image: -webkit-gradient(linear, left top, left bottom, from(#6ec2e8), to(#b6e2ff));
     background-image: -moz-linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
